# rushhour

./: .gitignore  Cargo.toml
benches/: my_benchmark.rs
gameboards/: Rushhour6x6_test.csv
results/: README.md  breadth_first_9x9_6.csv
src/: board.rs  main.rs  solvers.rs  ui.rs
