[package]
name = "rusthour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacon = "2.14.0"
clap = { version = "4.4.7", features = ["derive"] }
criterion = "0.5.1"
csv = "1.2.2"
either = "1.9.0"
indicatif = "0.17.6"
read_input = "0.8.6"
regex = "1.9.3"
rustc-hash = "1.1.0"
serde = "1.0.183"
smallvec = "1.11.0"

[[bench]]
name = "my_benchmark"
harness = false
